# UnitMatch

./: .gitignore  DEMO_UNITMATCH.m  DEMO_UNITMATCH_FigShareData.m  EvaluatingUnitMatch.m  MainAnalysis_Celian.m  MainAnalysis_Example.asv  MainAnalysis_Example.m  README.md  RunUnitMatchAllDataPerMouse.m  UnitMatch.asv  UnitMatch.m  UnitMatchModel.mat  custom_unitmatch_probability_phy.py  um_getPathsAndInfo_forUID.m  um_pipeline.m  um_runUnitMatch.m
Curation/: CompareManualCuration.m  EvaluatingUnitMatch.m  in2Science.m
DataPreparation/: DefaultParametersExtractKSData.m  ExtractKilosortData.m  LoadPreparedClusInfo.m  PrepareClusInfo.m  RemovingEmptyClusters.m  RunPyKS2_FromMatlab.m  getClusinfo.m  loadKSdir.m
Dependencies/: ApplyNaiveBayes.m  AssignUniqueID.m  AverageProbeActivity.asv  AverageProbeActivity.m  CalculateDuration.m  ConvertTemplatesAfterPhy.m  CreateNaiveBayes.m  CrossCorrelationFingerPrint.m  CrossCorrelationFingerPrint_BU.m  ExtractAndSaveAverageWaveforms.asv  ExtractAndSaveAverageWaveforms.m  ExtractFields.m  ExtractParameters.m  ExtractSimilarityMetrics.m  JF_gaussian_cut.m  LoadPreparedClusInfo.m  MainAnalysis_Example.m  MatchUnitsAlgorithm.asv  MatchUnitsAlgorithm.m  MixtureOfNorms.m  PrepareClusInfo.asv  PrepareClusInfo.m  RemoveNoiseAmplitudeBased.m  RunNaiveBayes.m  RunPyKS2_FromMatlab.m  RunUnitMatch.m  ToolboxesUsed_Demo.txt  UnitMatch.asv  UnitMatch.m  bc_extractRawWaveformsFast.m  bc_getQualityUnitType.m  bc_qualityParamValues.m  bc_runAllQualityMetrics.m  circ_mean.m  circ_r.m  lfpBandPower.m  loadKSdir.m  makepretty.m  rgb.m  smooth2a.m
ExampleAnalysisPipelines/: MainAnalysis_Example.m
Extra_Analysis/: CalculateDuration.m
FunctionalScores/: ComputeFunctionalScores.m  CrossCorrelationFingerPrint.m  QualityMetricsROCs.m  removeISIViolations.m
Histology/: GetHistologyOutput.m  MainHistology.m  alignatlasdata.m  lfpBandPowerNP2.m
LogoAndExamples/: QualityComparisonStitchedVsIndividual.m
MATLAB/: DEMO_UNITMATCH.m  DEMO_UNITMATCH_FigShareData.m  DEMO_UNITMATCH_MultipleSessions.m  DEMO_UNITMATCH_OpenEphys.m  in_container_sorter_script.py  sync_to_dropbox.ps1
Paper_Figures/: AnalyzeServerMice.m  PlotUnitsOnProbe.m  SummarizeAcrossMice.m  plotExampleCells_Fig4.m  summaryFunctionalPlots.m  summaryFunctionalPlots_Part2.m
Parameters/: bc_qualityParamValuesForUnitMatch.m
Plotting/: PlotTheseUnits_UM.m
PythonScripts/: RunPyKS2_FromMatlab.py  bc_extractCbinData.m  bc_extractCbinData_OLD.m
UMPy/: Bayes_fun.py  ExtractRawDemo.ipynb  Extract_raw_data.py  GUI.py  GUI_Reference_Guide.md  Metrics_fun.py  Output_base.npy  Overlord.py  Param_fun.py  README.md  Save_utils.py  UM Demo Load.ipynb  UMPyExample.ipynb  UMPy_spike_interface_demo.ipynb  UmPy_example.ipynb  UmPy_example_brief.ipynb  environment.yml  metrics_fun.py  setup.py  utils.py
UnitMatchPipeline/: AssignUniqueID.m  AssignUniqueIDAlgorithm.m  DefaultParametersUnitMatch.m  UnitMatch.m  (+3 more)
UnitMatchPy/: MANIFEST.in  README.md  environment.yml  pyproject.toml  setup.py
UnitMatchPy/DeepUnitMatch/preprocess/: split_units.py
UnitMatchPy/DeepUnitMatch/testing/: compute_func_scores.py  fast_testing.py  naive_bayes.py  test.py
UnitMatchPy/DeepUnitMatch/train/: train_AE.py  train_finetune.py
UnitMatchPy/DeepUnitMatch/utils/: AE_npdataset.py  helpers.py  losses.py  metric.py  mymodel.py  myutil.py  npdataset.py  param_fun.py  train_utils.py
UnitMatchPy/Demo Notebooks/: DUM_training.ipynb  DeepUnitMatch.ipynb  ExtractRawDemo.ipynb  UM Demo Load.ipynb  UMPyExample.ipynb  UMPyExampleBrief.ipynb  UMPy_demo_load.ipynb  UMPy_example.ipynb  UMPy_example_detailed.ipynb  UMPy_spike_interface_demo.ipynb  extract_raw_data_demo.ipynb  extract_raw_data_demo_open_ephys.ipynb
UnitMatchPy/PaperAnalyses/: batch_lock.py  convert_python_batch_output_to_matlab.py  figure2.ipynb  figure3.ipynb  generate_merged_dataset.py  generate_metadata_index.py  run_deepunitmatch_batch.py  run_deepunitmatch_batch_onMerged.py  run_deepunitmatch_batch_onMerged_extramodels.py  run_deepunitmatch_batch_onMerged_maxdist_sweep.py  run_emd_batch_onMerged.py  sql.py
UnitMatchPy/UnitMatchPy/: AssignUniqueID.py  Bayes_fun.py  Extract_raw_data.py  GUI.py  Metrics_fun.py  Overlord.py  Save_utils.py  __init__.py  assign_unique_id.py  bayes_functions.py  default_params.py  extract_raw_data.py  metric_functions.py  overlord.py  param_functions.py  run.py  save_utils.py  utils.py
UnitMatchPy/tests/: test_chunked_metrics.py
UnitMatchPy/tools/: bump_version.py
(+1921 files in other folders)
