[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "UnitMatchPy"
version = "3.02"  # bump on each release (or switch to tag-based versioning)
description = "Automatic matching of neurons across sessions"
readme = "README.md"         # keep a README.md inside UnitMatchPy/
requires-python = ">=3.9,<3.11"
authors = [{ name = "Enny van Beest" }]

# CC BY-NC-SA 4.0 is not OSI-approved; declare clearly
license = { text = "CC BY-NC-SA 4.0 International" }

classifiers = [
  "License :: Other/Proprietary License",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

dependencies = [
  "numpy",
  "matplotlib",
  "scipy",
  "pandas",
  "mtscomp",
  "joblib",
  "mat73",
  "tqdm",
  "spikeinterface",
  "h5py",
  "scikit-learn",
  "torch",
]

[tool.setuptools]
packages = ["UnitMatchPy"]   # explicitly include only the Python package folder

[project.optional-dependencies]
notebooks = [
  "ipykernel",
]
