[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "UnitMatchPy"
version = "3.2.7"  # bump on each release 
description = "Automatic matching of neurons across sessions"
readme = "README.md"         # keep a README.md inside UnitMatchPy/
requires-python = ">=3.9"
authors = [{ name = "Enny van Beest, Suyash Agarwal, Wentao Qiu" }]

# CC BY-NC-SA 4.0 is not OSI-approved; declare clearly
license = { text = "CC BY-NC-SA 4.0 International" }

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "License :: Other/Proprietary License",
]

dependencies = [
  "numpy>=2.0,<3.0",
  "scipy>=1.9,<2.0",
  "pandas>=1.5,<3.0",
  "matplotlib>=3.6,<4.0",
  "joblib>=1.2,<2.0",
  "tqdm>=4.64,<5.0",
  "h5py>=3.8,<4.0",
  "scikit-learn>=1.2,<2.0",
  "mtscomp",
  "torch>=2.1,<3.0",
  # If your code imports these unconditionally, keep them here.
  # If not, move them to extras (recommended).
  "mat73>=0.62,<1.0",
  "spikeinterface>=0.100,<0.120",
]

[project.optional-dependencies]
# Put heavy / platform-quirky stuff here so core install is reliable
full = [
  "mat73>=0.62,<1.0",
  "spikeinterface>=0.100,<0.120", 
]
notebooks = ["ipykernel>=6,<7"]
dev = ["pytest", "ruff", "mypy", "build", "twine"]

[tool.setuptools]
# explicitly include only the Python package folder
packages = ["UnitMatchPy"]

